--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ a:hover{
 
 header.main{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     width: 100%;
     max-width: 1200px;
@@ -62,4 +62,11 @@ footer{
     background-color: #2c2c2c;
     color: #f9f9f9;
     margin-top: 20px;
+}
+
+a.nav-link{
+    display: inline-block;
+    margin-right: 15px;
+    font-weight: bold;
+    text-transform: capitalize;
 }
